force-app/main/default/objects/AsyncJobRequest__c/AsyncJobRequest__c.object-meta.xml
<CustomObject>
    <description>A custom object designed to queue and manage Batch Apex job requests for optimized load balancing and system resource utilization.</description>
    <label>Async Job Request</label>
    <nameField>
        <displayFormat>BJR-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Job Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>