force-app/main/default/objects/AsyncJobRequest__c/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <description>Specifies the number of records to process in each batch, allowing fine control over job execution volume.</description>
    <inlineHelpText>Defines the batch size for processing records. The maximum is 200 records per batch.</inlineHelpText>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>