force-app/main/default/objects/AsyncJobRequest__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Captures any error messages in case of job failure.</description>
    <inlineHelpText>Increments each time the job is retried due to failure.</inlineHelpText>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>