force-app/main/default/objects/AsyncJobRequest__c/fields/FinishedTime__c.field-meta.xml
<CustomField>
    <fullName>FinishedTime__c</fullName>
    <description>The date and time when the batch job finished processing.</description>
    <inlineHelpText>Stores the completion time of the batch job, updated when the job status changes to Completed or Failed.</inlineHelpText>
    <label>Finished Time</label>
    <type>DateTime</type>
</CustomField>