force-app/main/default/objects/AsyncJobRequest__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique identifier for the associated Apex batch job. Used for updating to prevent duplicate entries.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the associated Apex batch job. Used for updating to prevent duplicate entries.</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>