force-app/main/default/objects/AsyncJobRequest__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <description>Provides a unique, readable identifier for each job request, making it easier to locate and track jobs.</description>
    <inlineHelpText>A descriptive name for the batch job, useful for tracking and identification.</inlineHelpText>
    <label>Job Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>