force-app/main/default/objects/AsyncJobRequest__c/fields/JobStatus__c.field-meta.xml
<CustomField>
    <fullName>JobStatus__c</fullName>
    <description>Tracks the lifecycle state of the job, from initial request to completion, and assists in managing retries and error handling.</description>
    <inlineHelpText>The current status of the Async Job Request.</inlineHelpText>
    <label>Job Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>