force-app/main/default/objects/AsyncJobRequest__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>A flexible field for passing serialized data (such as JSON) to the batch job, allowing customized parameters without adding more fields.</description>
    <inlineHelpText>Stores additional data or parameters required for this batch job. Use JSON format to structure complex data.</inlineHelpText>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>