force-app/main/default/objects/AsyncJobRequest__c/fields/ProcessedTime__c.field-meta.xml
<CustomField>
    <fullName>ProcessedTime__c</fullName>
    <description>Indicates when the job started processing, helping to analyze and optimize processing times.</description>
    <inlineHelpText>The date and time when this job began processing.</inlineHelpText>
    <label>Processed Time</label>
    <type>DateTime</type>
</CustomField>