force-app/main/default/objects/AsyncJobRequest__c/fields/RequestedTime__c.field-meta.xml
<CustomField>
    <fullName>RequestedTime__c</fullName>
    <description>Captures when each job request was submitted, assisting in job scheduling and load balancing.</description>
    <inlineHelpText>The date and time when this job request was created.</inlineHelpText>
    <label>Requested Time</label>
    <type>DateTime</type>
</CustomField>