force-app/main/default/objects/AsyncJobRequest__c/recordTypes/Batchable.recordType-meta.xml
<RecordType>
    <fullName>Batchable</fullName>
    <active>true</active>
    <label>Batchable</label>
</RecordType>