force-app/main/default/objects/AsyncJobRequest__c/recordTypes/Queueable.recordType-meta.xml
<RecordType>
    <fullName>Queueable</fullName>
    <active>true</active>
    <label>Queueable</label>
</RecordType>